Count builder, readme

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,25 @@
             <artifactId>async-promises</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>giulius-mongodb-async</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>giulius-mongodb-async</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>        
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>giulius-tests</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>        
     </dependencies>
     <repositories>
         <repository>
