Add missing POM sections

--- a/mongo-promises-tests/pom.xml
+++ b/mongo-promises-tests/pom.xml
@@ -32,4 +32,23 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <url>https://github.com/timboudreau/mongo-promises</url>
+    <scm>
+        <url>https://github.com/timboudreau/mongo-promises</url>
+        <connection>scm:git:https://github.com/timboudreau/mongo-promises.git</connection>
+        <developerConnection>git@github.com/timboudreau/mongo-promises.git</developerConnection>
+    </scm>
+    <licenses>
+        <license>
+            <name>MIT</name>
+            <url>http://opensource.org/licenses/MIT</url>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <name>Tim Boudreau</name>
+            <email>tim@timboudreau.com</email>
+            <url>https://timboudreau.com</url>
+        </developer>
+    </developers>
 </project>
