--- a/mongo-promises-tests/pom.xml
+++ b/mongo-promises-tests/pom.xml
@@ -50,4 +50,20 @@
             <url>https://timboudreau.com</url>
         </developer>
     </developers>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <parallel/>
+                    <parallelMavenExecution>false</parallelMavenExecution>
+                    <perCoreThreadCount>1</perCoreThreadCount>
+                    <threadCount>1</threadCount>
+                    <reuseForks>false</reuseForks>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
