Prep for deployment to maven central

--- a/mongo-promises-tests/pom.xml
+++ b/mongo-promises-tests/pom.xml
@@ -30,7 +30,10 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <url>https://github.com/timboudreau/mongo-promises</url>
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/timboudreau/mongo-promises/issues</url>
+    </issueManagement>
     <scm>
         <url>https://github.com/timboudreau/mongo-promises</url>
         <connection>scm:git:https://github.com/timboudreau/mongo-promises.git</connection>
