--- a/mongo-promises-tests/pom.xml
+++ b/mongo-promises-tests/pom.xml
@@ -39,6 +39,10 @@
         <connection>scm:git:https://github.com/timboudreau/mongo-promises.git</connection>
         <developerConnection>git@github.com/timboudreau/mongo-promises.git</developerConnection>
     </scm>
+    <organization>
+        <name>Mastfrog Technologies</name>
+        <url>https://mastfrog.com</url>
+    </organization>
     <licenses>
         <license>
             <name>MIT</name>
