--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <relativePath/>
     </parent>
     <artifactId>mongo-promises</artifactId>
+    <url>https://github.com/timboudreau/mongo-promises</url>
     <dependencies>
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -57,10 +58,11 @@
         <url>https://github.com/timboudreau/mongo-promises/issues</url>
     </issueManagement>
     <scm>
-        <url>https://github.com/timboudreau/mongo-promises</url>
+        <url>https://github.com/timboudreau/mongo-promises.git</url>
         <connection>scm:git:https://github.com/timboudreau/mongo-promises.git</connection>
         <developerConnection>git@github.com/timboudreau/mongo-promises.git</developerConnection>
     </scm>
+    
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
@@ -68,7 +70,8 @@
     <licenses>
         <license>
             <name>MIT</name>
-            <url>http://opensource.org/licenses/MIT</url>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
     <developers>
