Remove global junit dependency in order to start using JUnit 5; add JUnit 4 dependency to projects that now need it

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>async-promises</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
