--- a/mongo-promises-tests/pom.xml
+++ b/mongo-promises-tests/pom.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+<project
+     xmlns="http://maven.apache.org/POM/4.0.0"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
         <relativePath/>
     </parent>
+
     <artifactId>mongo-promises-tests</artifactId>
+
     <url>https://github.com/timboudreau/mongo-promises</url>
+
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -41,15 +49,18 @@
         <system>Github</system>
         <url>https://github.com/timboudreau/mongo-promises/issues</url>
     </issueManagement>
+
     <scm>
         <url>https://github.com/timboudreau/mongo-promises.git</url>
         <connection>scm:git:https://github.com/timboudreau/mongo-promises.git</connection>
         <developerConnection>git@github.com/timboudreau/mongo-promises.git</developerConnection>
     </scm>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -57,6 +68,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Tim Boudreau</name>
@@ -64,6 +76,7 @@
             <url>https://timboudreau.com</url>
         </developer>
     </developers>
+
     <build>
         <plugins>
             <plugin>
@@ -78,5 +91,8 @@
                 </configuration>
             </plugin>
         </plugins>
+
     </build>
+
 </project>
+
