--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+<project
+     xmlns="http://maven.apache.org/POM/4.0.0"
+     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
         <relativePath/>
     </parent>
+
     <artifactId>mongo-promises</artifactId>
+
     <url>https://github.com/timboudreau/mongo-promises</url>
+
     <dependencies>
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -25,38 +33,50 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
+
             <plugin>
+
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.16</version>
                 <configuration>
+
                     <parallel/>
                     <parallelMavenExecution>false</parallelMavenExecution>
                     <perCoreThreadCount>1</perCoreThreadCount>
                     <threadCount>1</threadCount>
                     <reuseForks>false</reuseForks>
+
                     <systemPropertyVariables>
                         <databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}</databaseSchema>
                     </systemPropertyVariables>
+
                 </configuration>
+
             </plugin>
+
         </plugins>
+
     </build>
     <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/mongo-promises/issues</url>
     </issueManagement>
+
     <scm>
         <url>https://github.com/timboudreau/mongo-promises.git</url>
         <connection>scm:git:https://github.com/timboudreau/mongo-promises.git</connection>
         <developerConnection>git@github.com/timboudreau/mongo-promises.git</developerConnection>
     </scm>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -64,6 +84,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Tim Boudreau</name>
@@ -71,4 +92,6 @@
             <url>https://timboudreau.com</url>
         </developer>
     </developers>
+
 </project>
+
