--- a/mongo-promises-tests/pom.xml
+++ b/mongo-promises-tests/pom.xml
@@ -18,7 +18,16 @@
 
     <url>https://github.com/timboudreau/mongo-promises</url>
 
+    <properties>
+        <enforcer.skip>true</enforcer.skip>
+    </properties>
+
     <dependencies>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>bson</artifactId>
+            <version>${mongo.driver.version}</version>
+        </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>mongo-promises</artifactId>
