--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,20 @@
 
     <url>https://github.com/timboudreau/mongo-promises</url>
 
+    <properties>
+        <enforcer.skip>true</enforcer.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.mongodb</groupId>
+            <artifactId>bson</artifactId>
+            <version>${mongo.driver.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-async</artifactId>
+            <version>${mongo.driver.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
